# riscy-boi

./: .gitignore  .pylintrc  README.md  alu.py  conftest.py  pyproject.toml  register_file.py  riscyboi.xml
riscy_boi/: __main__.py  alu.py  cpu.py  data_memory.py  encoding.py  instruction_decoder.py  program_counter.py  register_file.py  top.py
tests/: test_alu.py  test_cpu.py  test_encoding.py  test_instruction_decoder.py  test_program_counter.py  test_register_file.py
